--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <script src="js/jquery-3.4.1.min.js"></script>
     <title>Form Builder</title>
 </head>
 
 <body>
     <div class="wrapper">
-
         <div class="left">
             <h1>Form Builder</h1>
-            <form id="form">
+            <form>
+                <ol id="form" class='example'>
+                </ol>
             </form>
         </div>
-
-
         <div class="right">
 
             <button type="button" class="collapsible">Text Answer</button>
@@ -47,9 +47,11 @@
                 <button
                     onclick='boxAnswer(index, document.getElementById("boxQuestion").value, document.getElementById("boxAnswers").value); index++'>Add</button>
             </div>
-        </div>
 
-        <script src="script.js"></script>
+        </div>
+    </div>
+    <script src="script.js"></script>
+    <script src="js/jquery-sortable-min.js"></script>
 </body>
 
 </html>
