--- a/index.html
+++ b/index.html
@@ -5,54 +5,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <!-- <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-app.js"></script> -->
-    <title>Form Builder</title>
+    <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
+    <link rel="stylesheet" href="mainstyle.css" />
+    <title>Form List</title>
 </head>
 
 <body>
-    <div class="wrapper">
-        <div class="left">
-            <h1>Form Builder</h1>
-            <form>
-                <ol id="form" class='example'>
-                </ol>
-            </form>
-        </div>
-        <div class="right">
-
-            <button type="button" class="collapsible">Text Answer</button>
-            <div class="content">
-                <label>Question: </label>
-                <textarea id="textQuestion" cols="40"></textarea><br>
-                <button onclick='textAnswer(index, document.getElementById("textQuestion").value); index++'>Add</button>
-            </div>
-
-            <button type="button" class="collapsible">Radio Answer</button>
-            <div class="content">
-                <label>Question: </label>
-                <textarea id="radioQuestion" cols="40"></textarea><br>
-                <label>Answers: </label>
-                <textarea id="radioAnswers" cols="40"></textarea><br>
-                <button
-                    onclick='otherAnswer(index, "radio", document.getElementById("radioQuestion").value, document.getElementById("radioAnswers").value); index++'>Add</button>
-            </div>
-
-            <button type="button" class="collapsible">Checkbox Answer</button>
-            <div class="content">
-                <label>Question: </label>
-                <textarea id="boxQuestion" cols="40"></textarea><br>
-                <label>Answers: </label>
-                <textarea id="boxAnswers" cols="40"></textarea><br>
-                <button
-                    onclick='otherAnswer(index, "checkbox", document.getElementById("boxQuestion").value, document.getElementById("boxAnswers").value); index++'>Add</button>
-            </div>
-
-        </div>
+    <div id="login_div" class="main-div">
+        <h3>Login</h3>
+        <input id="email" type="email" placeholder="Email...">
+        <input id="password" type="password" placeholder="Password...">
+        <button onclick="login()">Login</button>
     </div>
-    <script src="script.js"></script>
-    <script src="js/jquery-sortable-min.js"></script>
+
+    <div id="user_div" class="loggedin-div">
+        <h3>Form List</h3>
+        <ol id="formList">
+        </ol>
+
+        <input id="formTitle" type="text" placeholder="New Form Title...">
+        <button onclick='newForm(document.getElementById("formTitle").value)'>New Form</button>
+        <br>
+        <button onclick="logout()">Logout</button>
+    </div>
+
+    <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-auth.js"></script>
+    <script src="firebase.js"></script>
 </body>
 
 </html>
