--- a/formbuilder/index.html
+++ b/formbuilder/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
-    <script src="js/jquery-3.4.1.min.js"></script>
+    <link rel="stylesheet" href="/formbuilder/style.css">
+    <script src="/js/jquery-3.4.1.min.js"></script>
     <title>Form Builder</title>
 </head>
 
@@ -14,13 +14,19 @@
     <div class="wrapper">
         <div class="left">
             <h1>Form Builder</h1>
-            <button onclick="save()">Save</button>
+            <div style="padding-inline-start: 40px;">
+                <a href="/index.html">Home</a>
+                <button onclick="save()">Save</button>
+                <span id="lastSaved"></span>
+            </div>
+
             <form>
                 <ol id="form" class='example'>
                 </ol>
             </form>
         </div>
         <div class="right">
+
 
             <button type="button" class="collapsible">Text Answer</button>
             <div class="content">
@@ -62,8 +68,8 @@
     <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-database.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-auth.js"></script>
-    <script src="script.js"></script>
-    <script src="js/jquery-sortable-min.js"></script>
+    <script src="/formbuilder/script.js"></script>
+    <script src="/js/jquery-sortable-min.js"></script>
 </body>
 
 </html>
