--- a/homework/index.html
+++ b/homework/index.html
@@ -5,31 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
-    <title>View Results</title>
+    <link rel="stylesheet" href="/homework/style.css">
+    <title>Form Builder</title>
 </head>
 
 <body>
     <div class="wrapper">
-        <div class="left">
-            <h1>Form Builder</h1>
-            <div style="padding-inline-start: 40px;">
-                <a href="index.html">Home</a>
-                <button onclick="save()">Save</button>
-                <span id="lastSaved"></span>
-            </div>
-
-            <form>
-                <ol id="form" class='example'>
-                </ol>
-            </form>
+        <div class='header'>
+            <button class="left_btn" onclick="save()">Save</button>
+            <span id="lastSaved"></span>
         </div>
+        <h1 style="text-align: center;">Form Title</h1>
+
+        <form>
+            <ol id="form" class='example'>
+            </ol>
+        </form>
+
     </div>
     <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-database.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-auth.js"></script>
-    <script src="script.js"></script>
+    <script src="/homework/script.js"></script>
 </body>
 
 </html>
