--- a/index.html
+++ b/index.html
@@ -7,22 +7,20 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
     <link rel="stylesheet" href="/style.css" />
-    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+    
     <title>Form List</title>
 </head>
 
 <body>
-    <!-- <div id="login_div" class="main-div">
+    <div id="logged-out" class="main-container">
         <h3>Login</h3>
         <input id="email" type="email" placeholder="Email...">
         <input id="password" type="password" placeholder="Password...">
         <button onclick="login()">Login</button>
-    </div> -->
+    </div>
 
 
-
-    <div class="main-container">
+    <div id="logged-in" class="main-container">
 
         <div class="main-container-header">
             <h1>Ontario Health Forms</h1>
@@ -31,40 +29,12 @@
 
         <div class="form-list-head">
             <p>FORMS</p>
-            <button>NEW FORM</button>
+            <button onclick="newForm()">NEW FORM</button>
         </div>
 
-        <div class="form-list">
-
-            <div class="form-list-item">
-                <p>Form 1</p>
-                <p> 01/01/2020</p>
-                <button class="btn"><i class="fa fa-ellipsis-v"></i></button>
-            </div>
-            <div class="form-list-item">
-                <p>Form 2</p>
-                <p> 01/01/2020</p>
-                <button class="btn"><i class="fa fa-ellipsis-v"></i></button>
-
-            </div>
-            <div class="form-list-item">
-                <p>Form 3</p>
-                <p> 01/01/2020</p>
-                <button class="btn"><i class="fa fa-ellipsis-v"></i></button>
-            </div>
+        <div id="formList" class="form-list">
         </div>
-
-
-
     </div>
-    <!-- <div id="user_div" class="loggedin-div">
-        <h3>Form List</h3>
-        <ol id="formList">
-        </ol>
-
-        <input id="formTitle" type="text" placeholder="New Form Title...">
-        <button onclick='newForm(document.getElementById("formTitle").value)'>New Form</button>
-    </div> -->
 
     <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-analytics.js"></script>
