--- a/homework/index.html
+++ b/homework/index.html
@@ -6,9 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/homework/style.css">
-    <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
-    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
     <title>Form Builder</title>
 </head>
@@ -19,7 +16,7 @@
             <button class="left_btn" onclick="save()">Save</button>
             <span id="lastSaved"></span>
         </div>
-        <h1 style="text-align: center;">Form Title</h1>
+        <h1 id="form_title" contenteditable style="text-align: center;">Form Title</h1>
 
         <form>
             <ol id="form" class='example'>
