--- a/formbuilder/index.html
+++ b/formbuilder/index.html
@@ -5,85 +5,128 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/formbuilder/style.css">
-    <script src="/js/jquery-3.4.1.min.js"></script>
-    <title>Form Builder</title>
+    <title>Edit</title>
+    <link rel="stylesheet" type="text/css" href="edit.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/7ceee42a74.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.js"
+        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <div class="wrapper">
-        <div class='header'>
-            <div class="left_btns">
-                <a href="/index.html">Home</a>
-                <button class="left_btn" onclick="save()">Save</button>
-                <span id="lastSaved"></span>
-            </div>
-
-            <div class="right_btns">
-                <button>Share</button>
-                <button>Download XML</button>
-            </div>
-        </div>
-        <h1 id="form_title" contenteditable style="text-align: center;">Form Title</h1>
-
-
-
-        <div class="tabs">
-            <a href="#">Edit</a>
-            <a href="#">View Results</a>
+    <div class="header">
+        <div class="left-buttons">
+            <button onclick=""><i class="fa fa-chevron-left"></i>Home</button>
+            <button onclick="save()">Save</button>
+            <span id="lastSaved"></span>
         </div>
 
+        <h1 id="form_title" contenteditable>Thyroid Cancer Checklist</h1>
 
-        <form>
-            <ol id="form" class="example">
-            </ol>
-        </form>
-
-
-
-        <!-- <button type="button" class="collapsible">Section</button>
-        <div class="content">
-            <label>Title: </label>
-            <textarea id="sectionTitle" cols="40"></textarea><br>
-            <button onclick='section(document.getElementById("sectionTitle").value)'>Add</button>
-        </div> -->
-
-        <div class="content">
-            <h3>Text Answer</h3>
-            <label>Question: </label>
-            <textarea id="textQuestion" cols="40"></textarea><br>
-            <button onclick='textAnswer(document.getElementById("textQuestion").value)'>Add</button>
+        <div class="right-buttons">
+            <button><i class="fa fa-share"></i>Share</button>
+            <button><i class="fa fa-download"></i>Download XML</button>
         </div>
-
-        <div class="content">
-            <h3>Radio Answer</h3>
-            <label>Question: </label>
-            <textarea id="radioQuestion" cols="40"></textarea><br>
-            <label>Answers: </label>
-            <textarea id="radioAnswers" cols="40"></textarea><br>
-            <button
-                onclick='otherAnswer("radio", document.getElementById("radioQuestion").value, document.getElementById("radioAnswers").value)'>Add</button>
-        </div>
-
-        <div class="content">
-            <h3>Checkbox Answer</h3>
-            <label>Question: </label>
-            <textarea id="boxQuestion" cols="40"></textarea><br>
-            <label>Answers: </label>
-            <textarea id="boxAnswers" cols="40"></textarea><br>
-            <button
-                onclick='otherAnswer("checkbox", document.getElementById("boxQuestion").value, document.getElementById("boxAnswers").value)'>Add</button>
-        </div>
-
-
-
     </div>
+
+
+    <div class="main-container">
+        <div class="tab">
+            <a class="tablinks selected" href="#">Edit Form</a>
+            <a class="tablinks" href="#">View Results</a>
+        </div>
+
+
+        <div id="form" class="form-container">
+
+            <div class="question" name="radio">
+
+                <div class="question-view">
+                    <i class="fa fa-pencil" onclick="toggleEdit(this)"></i>
+                    <p name="question">Placeholder</p>
+                    <div name="answers">
+                    </div>
+                </div>
+
+                <div class="edit-view hidden">
+                    <p><i class="far fa-dot-circle"></i>SINGLE SELECT QUESTION</p>
+                    <input type="text" placeholder="Enter your question here">
+                    <textarea type="text" placeholder="Enter your answers here"></textarea>
+                    <div class="edit-buttons">
+                        <button class="solid-btn red" onclick="deleteQuestion(this)">Delete</button>
+                        <div>
+                            <button class="outlined-btn" onclick="cancelEdit(this)">Cancel</button>
+                            <button class="solid-btn" onclick="saveEdit(this)">Save</button>
+                        </div>
+
+                    </div>
+                </div>
+
+
+            </div>
+
+
+            <div class="question" name="text">
+
+                <div class="question-view">
+                    <i class="fa fa-pencil" onclick="toggleEdit(this)"></i>
+
+                    <p name="question"></p>
+                    <div name="answers">
+                        <input type="text" class="text-answer" disabled placeholder="Written Answer...">
+                    </div>
+
+                </div>
+
+                <div class="edit-view hidden">
+                    <p><i class="fa fa-font"></i>TEXT QUESTION</p>
+                    <input type="text" placeholder="Enter your question here">
+                    <div class="edit-buttons">
+                        <button class="solid-btn red" onclick="deleteQuestion(this)">Delete</button>
+                        <div>
+                            <button class="outlined-btn" onclick="cancelEdit(this)">Cancel</button>
+                            <button class="solid-btn" onclick="saveEdit(this)">Save</button>
+                        </div>
+
+                    </div>
+                </div>
+
+
+            </div>
+
+        </div>
+
+
+        <div class="form-buttons">
+            <p class="instruction">Add a question</p>
+            <div>
+                <button class="solid-btn"><i class="fa fa-font"></i>Text</button>
+                <button class="solid-btn"><i class="far fa-dot-circle"></i>Single Select</button>
+                <button class="solid-btn"><i class="fa fa-check-square"></i>Multi Select</button>
+            </div>
+        </div>
+    </div>
+
     <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-database.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-auth.js"></script>
     <script src="/formbuilder/script.js"></script>
-    <script src="/js/jquery-sortable-min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $("button.child-btn").click(function (e) {
+                $(this).toggleClass("active");
+                $("div.child-menu").toggleClass("expand");
+                e.preventDefault();
+            });
+        });
+        $('textarea').each(function () {
+            this.setAttribute('style', 'height:' + (this.scrollHeight) + 'px;overflow-y:hidden;');
+        }).on('input', function () {
+            this.style.height = 'auto';
+            this.style.height = (this.scrollHeight) + 'px';
+        });
+    </script>
 </body>
 
 </html>
