added child button, results view, and updated header

--- a/formbuilder/index.html
+++ b/formbuilder/index.html
@@ -25,7 +25,7 @@
 
         <div class="right-buttons">
             <button><i class="fa fa-share"></i>Share</button>
-            <button><i class="fa fa-download"></i>Download XML</button>
+            <button><i class="fa fa-code"></i>XML</button>
         </div>
     </div>
 
@@ -33,7 +33,7 @@
     <div class="main-container">
         <div class="tab">
             <a class="tablinks selected" href="#">Edit Form</a>
-            <a class="tablinks" href="#">View Results</a>
+            <a class="tablinks" href="results.html">View Results</a>
         </div>
 
 
@@ -45,6 +45,16 @@
                     <i class="fa fa-pencil" onclick="toggleEdit(this)"></i>
                     <p name="question">Placeholder</p>
                     <div name="answers">
+                    </div>
+                </div>
+
+                <div class="add-child">
+                    <button class="child-btn">+</button>
+                    <div class="child-menu">
+                        <p>Add a child question</p>
+                        <a><i class="fa fa-font"></i>Text</a><br>
+                        <a><i class="far fa-dot-circle"></i>Single Select</a><br>
+                        <a><i class="fa fa-check-square"></i>Multi Select</a><br>
                     </div>
                 </div>
 
@@ -61,7 +71,6 @@
 
                     </div>
                 </div>
-
 
             </div>
 
