--- a/formbuilder/index.html
+++ b/formbuilder/index.html
@@ -18,7 +18,8 @@
         <div class="left-buttons">
             <button onclick=""><i class="fa fa-chevron-left"></i>Home</button>
             <button onclick="save()">Save</button>
-            <span style="position: absolute; left: 100%; white-space: pre;" id="lastSaved"></span>
+            <!-- <span style="position: absolute; left: 100%; white-space: pre;" id="lastSaved"></span> -->
+            <span id="lastSaved"></span>
         </div>
 
         <h1 id="form_title" contenteditable>Thyroid Cancer Checklist</h1>
