--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/7ceee42a74.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/style.css" />
     
     <title>Form List</title>
@@ -13,10 +14,13 @@
 
 <body>
     <div id="logged-out" class="main-container">
-        <h3>Login</h3>
+        <img src="assets/oh-logo.png" alt="oh-logo">
+        <h4>SYNOPTIC REPORT BUILDER</h4>
+        <!-- <h2>Login</h2> -->
+        <p>Please enter your login information below</p>
         <input id="email" type="email" placeholder="Email...">
         <input id="password" type="password" placeholder="Password...">
-        <button onclick="login()">Login</button>
+        <button class="solid-btn" onclick="login()">Log In</button>
     </div>
 
 
@@ -24,12 +28,12 @@
 
         <div class="main-container-header">
             <h1>Ontario Health Forms</h1>
-            <button onclick="logout()" class="log-out">Log out</button>
+            <button onclick="logout()" class="log-out"><i class="fas fa-sign-out-alt"></i>Log Out</button>
         </div>
 
         <div class="form-list-head">
-            <p>FORMS</p>
-            <button onclick="newForm()">NEW FORM</button>
+            <p>YOUR FORMS</p>
+            <button class="solid-btn" onclick="newForm()"><i class="fa fa-plus"></i>Create Form</button>
         </div>
 
         <div id="formList" class="form-list">
