--- a/homework/index.html
+++ b/homework/index.html
@@ -11,6 +11,113 @@
 </head>
 
 <body>
+
+    <div class="main-container">
+        <h1>Thyroid Cancer</h1>
+        <p id="instructions">Please vote on the questions below. You can opt-out from any question if you need to.</p>
+
+        <div class="question-container">
+            <div class="left-container">
+                <label class="opt-out"><input type="checkbox">Opt Out</label>
+                <p>1. This is an example question that can be very very very long?</p>
+                <label class="answer"><input type="radio" disabled> Answer 1</label>
+                <label class="answer"><input type="radio" disabled> Answer 2</label>
+                <label class="answer"><input type="radio" disabled> Answer 3</label>
+            </div>
+
+            <div class="right-container">
+                <div class="scores">
+                    <div class="clarity-score">
+                        <p>Clarity</p>
+                        <div class="scale">
+                            <label for="">Unclear</label>
+                            <label class="score-label">1<input type="radio"></label>
+                            <label class="score-label">2<input type="radio"></label>
+                            <label class="score-label">3<input type="radio"></label>
+                            <label class="score-label">4<input type="radio"></label>
+                            <label class="score-label">5<input type="radio"></label>
+                            <label for="">Clear</label>
+                        </div>
+                    </div>
+
+                    <div class="relevance-score">
+                        <p>Relevance</p>
+                        <div class="scale">
+                            <label for="">Unclear</label>
+                            <label class="score-label">1<input type="radio"></label>
+                            <label class="score-label">2<input type="radio"></label>
+                            <label class="score-label">3<input type="radio"></label>
+                            <label class="score-label">4<input type="radio"></label>
+                            <label class="score-label">5<input type="radio"></label>
+                            <label for="">Clear</label>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="overall-score">
+                    <p>Overall</p>
+                    <div>
+                        <label for=""><input type="radio">Include</label>
+                        <label for=""><input type="radio">Optional</label>
+                        <label for=""><input type="radio">Do not include</label>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="question-container">
+            <div class="left-container">
+                <label class="opt-out"><input type="checkbox">Opt Out</label>
+                <p>2. This is another example question that can be much much much longer?</p>
+                <label class="answer"><input type="radio" disabled> Answer 1</label>
+                <label class="answer"><input type="radio" disabled> Answer 2</label>
+                <label class="answer"><input type="radio" disabled> Answer 3</label>
+            </div>
+
+            <div class="right-container">
+                <div class="scores">
+                    <div class="clarity-score">
+                        <p>Clarity</p>
+                        <div class="scale">
+                            <label for="">Unclear</label>
+                            <label class="score-label">1<input type="radio"></label>
+                            <label class="score-label">2<input type="radio"></label>
+                            <label class="score-label">3<input type="radio"></label>
+                            <label class="score-label">4<input type="radio"></label>
+                            <label class="score-label">5<input type="radio"></label>
+                            <label for="">Clear</label>
+                        </div>
+                    </div>
+
+                    <div class="relevance-score">
+                        <p>Relevance</p>
+                        <div class="scale">
+                            <label for="">Unclear</label>
+                            <label class="score-label">1<input type="radio"></label>
+                            <label class="score-label">2<input type="radio"></label>
+                            <label class="score-label">3<input type="radio"></label>
+                            <label class="score-label">4<input type="radio"></label>
+                            <label class="score-label">5<input type="radio"></label>
+                            <label for="">Clear</label>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="overall-score">
+                    <p>Overall</p>
+                    <div>
+                        <label for=""><input type="radio">Include</label>
+                        <label for=""><input type="radio">Optional</label>
+                        <label for=""><input type="radio">Do not include</label>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+    </div>
     
     
 
