--- a/formbuilder/index.html
+++ b/formbuilder/index.html
@@ -18,7 +18,6 @@
         <div class="left-buttons">
             <button onclick=""><i class="fa fa-chevron-left"></i>Home</button>
             <button onclick="save()">Save</button>
-            <!-- <span style="position: absolute; left: 100%; white-space: pre;" id="lastSaved"></span> -->
             <span id="lastSaved"></span>
         </div>
 
@@ -74,7 +73,6 @@
                 </div>
 
             </div>
-
 
 
 
@@ -151,7 +149,8 @@
 
                 <div class="question-view">
                     <i class="fa fa-pencil" onclick="toggleEdit(this)"></i>
-                    <p class="child-condition"><span>Condition: </span>a</p> <!-- ADDED THIS LINE FOR THE CONDITION IN QUESTION VIEW-->
+                    <p class="child-condition"><span>Condition: </span>a</p>
+                    <!-- ADDED THIS LINE FOR THE CONDITION IN QUESTION VIEW-->
                     <p name="question">1.1 This is a child question</p>
                     <div name="answers">
                         <label><input type="radio" disabled>E</label>
@@ -172,7 +171,8 @@
 
                 <div class="edit-view">
                     <p><i class="far fa-dot-circle"></i>SINGLE SELECT QUESTION</p>
-                    <div class="child-condition-select">                         <!-- ADDED THIS DIV FOR THE CONDITION IN EDIT VIEW-->
+                    <div class="child-condition-select">
+                        <!-- ADDED THIS DIV FOR THE CONDITION IN EDIT VIEW-->
                         <p>Show if answered:</p>
                         <select name="" id="">
                             <option value="">Select a parent answer</option>
@@ -181,7 +181,7 @@
                             <option value="">c</option>
                             <option value="">d</option>
                         </select>
-                    </div>                                                      <!-- END OF DIV-->
+                    </div> <!-- END OF DIV-->
                     <input type="text" placeholder="Enter your question here">
                     <textarea placeholder="Enter your answers here"></textarea>
                     <div class="edit-buttons">
@@ -204,8 +204,10 @@
             <p class="instruction">Add a question</p>
             <div>
                 <button class="solid-btn" onclick="addQuestion('text')"><i class="fa fa-font"></i>Text</button>
-                <button class="solid-btn" onclick="addQuestion('radio')"><i class="far fa-dot-circle"></i>Single Select</button>
-                <button class="solid-btn" onclick="addQuestion('checkbox')"><i class="fa fa-check-square"></i>Multi Select</button>
+                <button class="solid-btn" onclick="addQuestion('radio')"><i class="far fa-dot-circle"></i>Single
+                    Select</button>
+                <button class="solid-btn" onclick="addQuestion('checkbox')"><i class="fa fa-check-square"></i>Multi
+                    Select</button>
             </div>
         </div>
     </div>
@@ -215,15 +217,6 @@
     <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-database.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-auth.js"></script>
     <script src="/formbuilder/script.js"></script>
-    <script>
-        $(document).ready(function () {
-            $("button.child-btn").click(function (e) {
-                $(this).toggleClass("active");
-                $("div.child-menu").toggleClass("expand");
-                e.preventDefault();
-            });
-        });
-    </script>
 </body>
 
 </html>
