--- a/formbuilder/results.html
+++ b/formbuilder/results.html
@@ -34,8 +34,8 @@
     <div class="main-container">
 
         <div class="tab">
-            <a class="tablinks" href="index.html">Edit Form</a>
-            <a class="tablinks selected" href="#">View Results</a>
+            <a id="edit_form" class="tablinks">Edit Form</a>
+            <a id="view_results" class="tablinks selected">View Results</a>
         </div>
 
         <div class="filters">
