--- a/formbuilder/index.html
+++ b/formbuilder/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="edit.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/7ceee42a74.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/file-saver@2.0.2/dist/FileSaver.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.js"
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 </head>
@@ -25,7 +26,7 @@
 
         <div class="right-buttons">
             <button><i class="fa fa-share"></i>Share</button>
-            <button><i class="fa fa-code"></i>XML</button>
+            <button onclick="toXML()"><i class="fa fa-code"></i>XML</button>
         </div>
     </div>
 
